migrator-tests/tests/snapshots/embedded__twoway_migrations-10.snap
---
source: examples/migration-cli/tests/embedded.rs
expression: fields_info.unwrap()
---
{
    "events": {},
    "fields": {
        "id": "DEFINE FIELD id ON migration TYPE record<migration>",
        "name": "DEFINE FIELD name ON migration TYPE string",
        "timestamp": "DEFINE FIELD timestamp ON migration TYPE int",
    },
    "indexes": {},
    "lives": {},
    "tables": {},
}
