migrator-tests/tests/snapshots/embedded__twoway_migrations-12.snap
---
source: examples/migration-cli/tests/embedded.rs
expression: fields_info.unwrap()
---
{
    "events": {},
    "fields": {
        "createdAt": "DEFINE FIELD createdAt ON planet TYPE datetime",
        "id": "DEFINE FIELD id ON planet TYPE record<planet>",
        "labels": "DEFINE FIELD labels ON planet TYPE array",
        "newName": "DEFINE FIELD newName ON planet TYPE string",
        "population": "DEFINE FIELD population ON planet TYPE int",
        "updatedAt": "DEFINE FIELD updatedAt ON planet TYPE datetime",
    },
    "indexes": {},
    "lives": {},
    "tables": {},
}
