migrator-tests/tests/snapshots/embedded__twoway_migrations-14.snap
---
source: examples/migration-cli/tests/embedded.rs
expression: fields_info.unwrap()
---
{
    "events": {},
    "fields": {},
    "indexes": {},
    "lives": {},
    "tables": {},
}
