migrator-tests/tests/snapshots/embedded__twoway_migrations-2.snap
---
source: examples/migration-cli/tests/embedded.rs
expression: get_db_info().await.unwrap()
---
DbInfo {
    analyzers: Analyzers(
        Info(
            {},
        ),
    ),
    functions: Functions(
        Info(
            {},
        ),
    ),
    params: Params(
        Info(
            {},
        ),
    ),
    scopes: Scopes(
        Info(
            {},
        ),
    ),
    tables: Tables(
        Info(
            {
                "animal": DefineStatementRaw(
                    "DEFINE TABLE animal SCHEMAFULL",
                ),
                "crop": DefineStatementRaw(
                    "DEFINE TABLE crop SCHEMAFULL",
                ),
                "eats": DefineStatementRaw(
                    "DEFINE TABLE eats SCHEMAFULL",
                ),
                "migration": DefineStatementRaw(
                    "DEFINE TABLE migration SCHEMAFULL",
                ),
                "new_stuff": DefineStatementRaw(
                    "DEFINE TABLE new_stuff SCHEMAFULL",
                ),
                "planet": DefineStatementRaw(
                    "DEFINE TABLE planet SCHEMAFULL",
                ),
            },
        ),
    ),
    tokens: Tokens(
        Info(
            {},
        ),
    ),
    users: Users(
        Info(
            {},
        ),
    ),
}
