migrator-tests/tests/snapshots/embedded__twoway_migrations-8.snap
---
source: examples/migration-cli/tests/embedded.rs
expression: fields_info.unwrap()
---
{
    "events": {},
    "fields": {
        "createdAt": "DEFINE FIELD createdAt ON eats TYPE datetime",
        "id": "DEFINE FIELD id ON eats TYPE record<eats>",
        "in": "DEFINE FIELD in ON eats TYPE record",
        "location": "DEFINE FIELD location ON eats TYPE string",
        "out": "DEFINE FIELD out ON eats TYPE record",
        "updatedAt": "DEFINE FIELD updatedAt ON eats TYPE datetime",
    },
    "indexes": {},
    "lives": {},
    "tables": {},
}
